--- a/index.html
+++ b/index.html
@@ -3,67 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="/CSS/styles.css" />
     <title>Web-Studio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="header-menu">
           <li>
-            <a href="">Studio</a>
+            <a class="header-menu-link" href="">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="header-menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-contacts">
+        <ul class="header-contacts-menu">
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-        <button type="button">Order Service</button>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2 id="Studio">Studio</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="studio">
+        <h2 hidden class="studio-title" id="Studio">Studio</h2>
+        <ul class="studio-navigation">
+          <li class="stidio-menu-item">
+            <h3 class="studio-subtitle">Strategy</h3>
+            <p class="studio-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="stidio-menu-item">
+            <h3 class="studio-subtitle">Punctuality</h3>
+            <p class="studio-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="stidio-menu-item">
+            <h3 class="studio-subtitle">Diligence</h3>
+            <p class="studio-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="stidio-menu-item">
+            <h3 class="studio-subtitle">Technologies</h3>
+            <p class="studio-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -71,10 +90,10 @@
         </ul>
       </section>
 
-      <section>
-        <h2 id="Portfolio">What are we doing</h2>
-        <ul>
-          <li>
+      <section class="prtfolio">
+        <h2 id="Portfolio" class="prtfolio-title">What are we doing</h2>
+        <ul class="prtfolio-navigation">
+          <li class="prtfolio-menu-item">
             <img
               src="./images/Rectangle1.jpg"
               alt="Drawing Portfolio 1"
@@ -82,7 +101,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="prtfolio-menu-item">
             <img
               src="./images/Rectangle2.jpg"
               alt="Drawing Portfolio 2"
@@ -90,7 +109,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="prtfolio-menu-item">
             <img
               src="./images/Rectangle3.jpg"
               alt="Drawing Portfolio 3"
@@ -101,56 +120,58 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="ourteam">
+        <h2 class="ourteam-title">Our Team</h2>
+        <ul class="ourteam-navigation">
+          <li class="ourteam-meny-item">
             <img
               src="./images/Mark.jpg"
               alt="foto Mark"
               width="264"
+              class="ourteam-meny-item"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="ourteam-subtitle">Mark Guerrero</h3>
+
+            <p class="ourteam-text">Product Designer</p>
           </li>
-          <li>
+          <li class="ourteam-meny-item">
             <img
               src="./images/Tom.jpg"
               alt="foto Tom"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="ourteam-subtitle">Tom Ford</h3>
+            <p class="ourteam-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="ourteam-meny-item">
             <img
               src="./images/Camila.jpg"
               alt="foto Camila"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="ourteam-subtitle">Camila Garcia</h3>
 
-            <p>Marketing</p>
+            <p class="ourteam-text">Marketing</p>
           </li>
-          <li>
+          <li class="ourteam-meny-item">
             <img
               src="./images/Daniel.jpg"
               alt="foto Daniel"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="ourteam-subtitle">Daniel Wilson</h3>
+            <p class="ourteam-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link" href="./index.html"> <span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
