--- a/portfolio.html
+++ b/portfolio.html
@@ -3,94 +3,169 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="/CSS/styles.css" />
     <title>Web-Studio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+    <header class="header">
+      <nav class="header-navigation">
+        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+        <ul class="header-menu">
           <li>
-            <a href="">Studio</a>
+            <a class="header-menu-link" href="">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="header-menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="header-contacts">
+        <ul class="header-contacts-menu">
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contacts-item">
+            <a class="header-contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <!-- <h1>Effective Solutions for Your Business</h1> -->
-
-        <button type="button">ALL</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Desing</button>
-        <button type="button">Marketing</button>
+      <section class="listbtn">
+        <button class="listbtn all" type="button">ALL</button>
+        <button class="listbtn web" type="button">Web Site</button>
+        <button class="listbtn app" type="button">App</button>
+        <button class="listbtn desing" type="button">Desing</button>
+        <button class="listbtn marketing" type="button">Marketing</button>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="rowpictures-one">
+        <ul class="rowpictures-navigation-one">
+          <li class="rowpictures-item">
             <img
-              src="./images/Mark.jpg"
+              src="./images/mi1.jpg"
               alt="foto Mark"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="rowpictures-title">Banking App Interface Concept</h3>
+            <p class="rowpictures-text">App</p>
           </li>
-          <li>
+          <li class="rowpictures-item">
             <img
-              src="./images/Tom.jpg"
+              src="./images/mi2.jpg"
               alt="foto Tom"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="rowpictures-title">Cashless Payment</h3>
+            <p class="rowpictures-text">Marketing</p>
           </li>
-          <li>
+          <li class="rowpictures-item">
             <img
-              src="./images/Camila.jpg"
+              src="./images/mi3.jpg"
               alt="foto Camila"
-              width="264"
-              height="260"
+              width="360"
+              height="300"
             />
-            <h3>Camila Garcia</h3>
-
-            <p>Marketing</p>
+            <h3 class="rowpictures-title">Meditation App</h3>
+            <p class="rowpictures-text">App</p>
           </li>
-          <li>
+        </ul>
+      </section>
+
+      <section class="rowpictures-second">
+        <ul class="rowpictures-navigation-second">
+          <li class="rowpictures-item">
             <img
-              src="./images/Daniel.jpg"
-              alt="foto Daniel"
-              width="264"
-              height="260"
+              src="./images/mi4.jpg"
+              alt="foto Mark"
+              width="360"
+              height="300"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="rowpictures-title">Taxi Service</h3>
+            <p class="rowpictures-text">Marketing</p>
+          </li>
+          <li class="rowpictures-item">
+            <img
+              src="./images/mi5.jpg"
+              alt="foto Tom"
+              width="360"
+              height="300"
+            />
+            <h3 class="rowpictures-title">Screen Illustrations</h3>
+            <p class="rowpictures-text">Design</p>
+          </li>
+          <li class="rowpictures-item">
+            <img
+              src="./images/mi6.jpg"
+              alt="foto Camila"
+              width="360"
+              height="300"
+            />
+            <h3 class="rowpictures-title">Online Courses</h3>
+            <p class="rowpictures-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="rowpictures-three">
+        <ul class="rowpictures-navigation-three">
+          <li class="rowpictures-item">
+            <img
+              src="./images/mi7.jpg"
+              alt="foto Mark"
+              width="360"
+              height="300"
+            />
+            <h3 class="rowpictures-title">Instagram Stories Concept</h3>
+            <p class="rowpictures-text">Design</p>
+          </li>
+          <li class="rowpictures-item">
+            <img
+              src="./images/mi8.jpg"
+              alt="foto Tom"
+              width="360"
+              height="300"
+            />
+            <h3 class="rowpictures-title">Organic Food</h3>
+            <p class="rowpictures-text">Web Site</p>
+          </li>
+          <li class="rowpictures-item">
+            <img
+              src="./images/mi9.jpg"
+              alt="foto Camila"
+              width="360"
+              height="300"
+            />
+            <h3 class="rowpictures-title">Fresh Coffee</h3>
+            <p class="rowpictures-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link" href="./index.html"> <span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
