--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,19 @@
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
-    <link rel="stylesheet" href="./CSS/styles.css" />
-    <title>Web-Studio</title>
+    <link rel="stylesheet" href="/CSS/styles.css" />
+    <title>portfolio</title>
   </head>
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="header-logo" href="/index.html"><span>Web</span>Studio</a>
         <ul class="header-menu">
           <li>
             <a class="header-menu-link" href="">Studio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-menu-link" href="/portfolio.html">Portfolio</a>
           </li>
           <li>
             <a class="header-menu-link" href="">Contacts</a>
