--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="header-menu-link" href="">Studio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="/portfolio.html">Portfolio</a>
+            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a class="header-menu-link" href="">Contacts</a>
