--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
-        <ul class="header-menu">
+      <nav class="list">
+        <a class="link logo" href="./index.html"> Web<span>Studio</span></a>
+        <ul class="list">
           <li>
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="">Contacts</a>
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="header-contacts">
-        <ul class="header-contacts-menu">
+        <ul class="list">
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="mailto:info@devstudio.com"
+            <a class="header-contacts link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="tel:+110001111111"
+            <a class="header-contacts link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
