--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <nav class="list">
-        <a class="link logo" href="./index.html"> Web<span>Studio</span></a>
+        <a class="logo link" href="./index.html"> Web<span>Studio</span></a>
         <ul class="list">
           <li>
             <a class="header-link link" href="./index.html">Studio</a>
