--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <section class="studio">
         <h2 hidden class="studio-title" id="Studio">Studio</h2>
-        <ul class="studio-navigation">
+        <ul class="list">
           <li class="stidio-menu-item">
             <h3 class="studio-subtitle">Strategy</h3>
             <p class="studio-text">
@@ -92,7 +92,7 @@
 
       <section class="prtfolio">
         <h2 id="Portfolio" class="prtfolio-title">What are we doing</h2>
-        <ul class="prtfolio-navigation">
+        <ul class="list">
           <li class="prtfolio-menu-item">
             <img
               src="./images/Rectangle1.jpg"
@@ -122,7 +122,7 @@
 
       <section class="ourteam">
         <h2 class="ourteam-title">Our Team</h2>
-        <ul class="ourteam-navigation">
+        <ul class="list">
           <li class="ourteam-meny-item">
             <img
               src="./images/Mark.jpg"
