--- a/portfolio.html
+++ b/portfolio.html
@@ -18,30 +18,30 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
-        <ul class="header-menu">
+      <nav class="list">
+        <a class="logo link" href="./index.html"> Web<span>Studio</span></a>
+        <ul class="list">
           <li>
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="header-menu-link" href="">Contacts</a>
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <address class="header-contacts">
-        <ul class="header-contacts-menu">
+        <ul class="list">
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="mailto:info@devstudio.com"
+            <a class="header-contacts link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-item">
-            <a class="header-contacts-link" href="tel:+110001111111"
+            <a class="header-contacts link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -56,10 +56,8 @@
         <button class="listbtn app" type="button">App</button>
         <button class="listbtn desing" type="button">Desing</button>
         <button class="listbtn marketing" type="button">Marketing</button>
-      </section>
 
-      <section class="rowpictures-one">
-        <ul class="rowpictures-navigation-one">
+        <ul class="list">
           <li class="rowpictures-item">
             <img
               src="./images/mi1.jpg"
@@ -70,6 +68,7 @@
             <h3 class="rowpictures-title">Banking App Interface Concept</h3>
             <p class="rowpictures-text">App</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi2.jpg"
@@ -80,6 +79,7 @@
             <h3 class="rowpictures-title">Cashless Payment</h3>
             <p class="rowpictures-text">Marketing</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi3.jpg"
@@ -90,11 +90,7 @@
             <h3 class="rowpictures-title">Meditation App</h3>
             <p class="rowpictures-text">App</p>
           </li>
-        </ul>
-      </section>
 
-      <section class="rowpictures-second">
-        <ul class="rowpictures-navigation-second">
           <li class="rowpictures-item">
             <img
               src="./images/mi4.jpg"
@@ -105,6 +101,7 @@
             <h3 class="rowpictures-title">Taxi Service</h3>
             <p class="rowpictures-text">Marketing</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi5.jpg"
@@ -115,6 +112,7 @@
             <h3 class="rowpictures-title">Screen Illustrations</h3>
             <p class="rowpictures-text">Design</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi6.jpg"
@@ -125,11 +123,7 @@
             <h3 class="rowpictures-title">Online Courses</h3>
             <p class="rowpictures-text">Marketing</p>
           </li>
-        </ul>
-      </section>
 
-      <section class="rowpictures-three">
-        <ul class="rowpictures-navigation-three">
           <li class="rowpictures-item">
             <img
               src="./images/mi7.jpg"
@@ -140,6 +134,7 @@
             <h3 class="rowpictures-title">Instagram Stories Concept</h3>
             <p class="rowpictures-text">Design</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi8.jpg"
@@ -150,6 +145,7 @@
             <h3 class="rowpictures-title">Organic Food</h3>
             <p class="rowpictures-text">Web Site</p>
           </li>
+
           <li class="rowpictures-item">
             <img
               src="./images/mi9.jpg"
@@ -164,7 +160,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link" href="./index.html"> <span>Web</span>Studio</a>
+      <a class="footer-logo link" href="./index.html">
+        Web<span class="footer-span">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
