--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,7 @@
 
     <main>
       <section class="listbtn">
+        <h1 hidden>section-main</h1>
         <button class="listbtn all" type="button">ALL</button>
         <button class="listbtn web" type="button">Web Site</button>
         <button class="listbtn app" type="button">App</button>
