--- a/portfolio.html
+++ b/portfolio.html
@@ -50,15 +50,26 @@
     </header>
 
     <main>
-      <section class="listbtn">
+      <section>
         <h1 hidden>section-main</h1>
-        <button class="listbtn all" type="button">ALL</button>
-        <button class="listbtn web" type="button">Web Site</button>
-        <button class="listbtn app" type="button">App</button>
-        <button class="listbtn desing" type="button">Desing</button>
-        <button class="listbtn marketing" type="button">Marketing</button>
-
-        <ul class="list">
+        <ul clas="button-list list">
+          <li>
+            <button class="listbtn actv" type="button">ALL</button>
+          </li>
+          <li>
+            <button class="listbtn actv" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="listbtn actv" type="button">App</button>
+          </li>
+          <li>
+            <button class="listbtn actv" type="button">Desing</button>
+          </li>
+          <li>
+            <button class="listbtn actv" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="rowpictures-list list">
           <li class="rowpictures-item">
             <img
               src="./images/mi1.jpg"
