--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,11 @@
     </header>
 
     <main>
-      <section>
+      <section class="list">
         <h1 hidden>section-main</h1>
-        <ul clas="button-list list">
+        <ul class="list">
           <li>
-            <button class="listbtn actv" type="button">ALL</button>
+            <button class="listbtn actv list" type="button">All</button>
           </li>
           <li>
             <button class="listbtn actv" type="button">Web Site</button>
@@ -63,13 +63,13 @@
             <button class="listbtn actv" type="button">App</button>
           </li>
           <li>
-            <button class="listbtn actv" type="button">Desing</button>
+            <button class="listbtn actv" type="button">Design</button>
           </li>
           <li>
             <button class="listbtn actv" type="button">Marketing</button>
           </li>
         </ul>
-        <ul class="rowpictures-list list">
+        <ul class="list">
           <li class="rowpictures-item">
             <img
               src="./images/mi1.jpg"
