--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
         <h1 hidden>section-main</h1>
         <ul class="list">
           <li>
-            <button class="listbtn actv list" type="button">All</button>
+            <button class="listbtn actv" type="button">All</button>
           </li>
           <li>
             <button class="listbtn actv" type="button">Web Site</button>
@@ -77,7 +77,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Banking App Interface Concept</h3>
+            <h2 class="rowpictures-title">Banking App Interface Concept</h2>
             <p class="rowpictures-text">App</p>
           </li>
 
@@ -88,7 +88,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Cashless Payment</h3>
+            <h2 class="rowpictures-title">Cashless Payment</h2>
             <p class="rowpictures-text">Marketing</p>
           </li>
 
@@ -99,7 +99,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Meditation App</h3>
+            <h2 class="rowpictures-title">Meditation App</h2>
             <p class="rowpictures-text">App</p>
           </li>
 
@@ -110,7 +110,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Taxi Service</h3>
+            <h2 class="rowpictures-title">Taxi Service</h2>
             <p class="rowpictures-text">Marketing</p>
           </li>
 
@@ -121,7 +121,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Screen Illustrations</h3>
+            <h2 class="rowpictures-title">Screen Illustrations</h2>
             <p class="rowpictures-text">Design</p>
           </li>
 
@@ -132,7 +132,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Online Courses</h3>
+            <h2 class="rowpictures-title">Online Courses</h2>
             <p class="rowpictures-text">Marketing</p>
           </li>
 
@@ -143,7 +143,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Instagram Stories Concept</h3>
+            <h2 class="rowpictures-title">Instagram Stories Concept</h2>
             <p class="rowpictures-text">Design</p>
           </li>
 
@@ -154,7 +154,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Organic Food</h3>
+            <h2 class="rowpictures-title">Organic Food</h2>
             <p class="rowpictures-text">Web Site</p>
           </li>
 
@@ -165,7 +165,7 @@
               width="360"
               height="300"
             />
-            <h3 class="rowpictures-title">Fresh Coffee</h3>
+            <h2 class="rowpictures-title">Fresh Coffee</h2>
             <p class="rowpictures-text">Web Site</p>
           </li>
         </ul>
