--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
         </ul>
         <ul class="list">
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi1.jpg"
                 alt="foto Mark"
@@ -84,7 +84,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi2.jpg"
                 alt="foto Tom"
@@ -97,7 +97,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi3.jpg"
                 alt="foto Camila"
@@ -110,7 +110,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi4.jpg"
                 alt="foto Mark"
@@ -123,7 +123,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi5.jpg"
                 alt="foto Tom"
@@ -136,7 +136,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi6.jpg"
                 alt="foto Camila"
@@ -149,7 +149,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi7.jpg"
                 alt="foto Mark"
@@ -162,7 +162,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi8.jpg"
                 alt="foto Tom"
@@ -175,7 +175,7 @@
           </li>
 
           <li class="rowpictures-item">
-            <a class="prtfolio-link" href="">
+            <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi9.jpg"
                 alt="foto Camila"
