--- a/portfolio.html
+++ b/portfolio.html
@@ -74,117 +74,117 @@
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi1.jpg"
-                alt="foto Mark"
+                alt="foto mi1"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Banking App Interface Concept</h2>
+              <p class="rowpictures-text">App</p>
             </a>
-            <h2 class="rowpictures-title">Banking App Interface Concept</h2>
-            <p class="rowpictures-text">App</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi2.jpg"
-                alt="foto Tom"
+                alt="foto mi2"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Cashless Payment</h2>
+              <p class="rowpictures-text">Marketing</p>
             </a>
-            <h2 class="rowpictures-title">Cashless Payment</h2>
-            <p class="rowpictures-text">Marketing</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi3.jpg"
-                alt="foto Camila"
+                alt="foto mi3"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Meditation App</h2>
+              <p class="rowpictures-text">App</p>
             </a>
-            <h2 class="rowpictures-title">Meditation App</h2>
-            <p class="rowpictures-text">App</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi4.jpg"
-                alt="foto Mark"
+                alt="foto mi4"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Taxi Service</h2>
+              <p class="rowpictures-text">Marketing</p>
             </a>
-            <h2 class="rowpictures-title">Taxi Service</h2>
-            <p class="rowpictures-text">Marketing</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi5.jpg"
-                alt="foto Tom"
+                alt="foto mi5"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Screen Illustrations</h2>
+              <p class="rowpictures-text">Design</p>
             </a>
-            <h2 class="rowpictures-title">Screen Illustrations</h2>
-            <p class="rowpictures-text">Design</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi6.jpg"
-                alt="foto Camila"
+                alt="foto mi6"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Online Courses</h2>
+              <p class="rowpictures-text">Marketing</p>
             </a>
-            <h2 class="rowpictures-title">Online Courses</h2>
-            <p class="rowpictures-text">Marketing</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi7.jpg"
-                alt="foto Mark"
+                alt="foto mi7"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Instagram Stories Concept</h2>
+              <p class="rowpictures-text">Design</p>
             </a>
-            <h2 class="rowpictures-title">Instagram Stories Concept</h2>
-            <p class="rowpictures-text">Design</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi8.jpg"
-                alt="foto Tom"
+                alt="foto mi8"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Organic Food</h2>
+              <p class="rowpictures-text">Web Site</p>
             </a>
-            <h2 class="rowpictures-title">Organic Food</h2>
-            <p class="rowpictures-text">Web Site</p>
           </li>
 
           <li class="rowpictures-item">
             <a class="prtfolio-link link" href="">
               <img
                 src="./images/mi9.jpg"
-                alt="foto Camila"
+                alt="foto mi9"
                 width="360"
                 height="300"
               />
+              <h2 class="rowpictures-title">Fresh Coffee</h2>
+              <p class="rowpictures-text">Web Site</p>
             </a>
-            <h2 class="rowpictures-title">Fresh Coffee</h2>
-            <p class="rowpictures-text">Web Site</p>
           </li>
         </ul>
       </section>
