--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <header class="header">
       <nav class="list">
         <a class="logo link" href="./index.html"
-          >Web<span clas="studio">Studio</span></a
+          >Web<span class="studio">Studio</span></a
         >
         <ul class="list">
           <li>
